k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presentacion
  labels:
    app: presentacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: presentacion
  template:
    metadata:
      labels:
        app: presentacion
    spec:
      containers:
        - name: presentacion
          image: ${REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "16Mi"
              cpu: "10m"
            limits:
              memory: "48Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
