k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presentacion
  labels:
    app: presentacion
spec:
  selector:
    app: presentacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
